--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,9 @@
-index.file=index.php
-url=http://localhost/delivery/
+browser.id=SL[/Browsers/webviewBrowser
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=
+hostname=localhost
+port=8000
+router=server.php
+run.as=INTERNAL
+url=http://localhost:8000/
